--- a/dubbo-test/test-service/pom.xml
+++ b/dubbo-test/test-service/pom.xml
@@ -32,7 +32,7 @@
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
-		<!-- dao 模块引用 -->
+		<!-- api 模块引用 -->
 		<dependency>
 			<groupId>com.java4all</groupId>
 			<artifactId>test-api</artifactId>
